metadata-classic/objects/becquerel_concerning_reviews__x.object
<CustomObject>
    <description>becquerel__concerning_reviews</description>
    <externalDataSource>Becquerel</externalDataSource>
    <externalName>becquerel__concerning_reviews</externalName>
    <fields>
        <fullName>RecordTypeId__c</fullName>
        <description>RecordTypeId</description>
        <externalDeveloperName>RecordTypeId</externalDeveloperName>
        <label>RecordTypeId</label>
        <length>128</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>bid_bid_id__c</fullName>
        <description>bid_bid_id</description>
        <externalDeveloperName>bid_bid_id</externalDeveloperName>
        <label>bid_bid_id</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>category_id_decoded__c</fullName>
        <description>category_id_decoded</description>
        <externalDeveloperName>category_id_decoded</externalDeveloperName>
        <label>category_id_decoded</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>customer_email__c</fullName>
        <description>customer_email</description>
        <externalDeveloperName>customer_email</externalDeveloperName>
        <label>customer_email</label>
        <length>128</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>customer_first_name__c</fullName>
        <description>customer_first_name</description>
        <externalDeveloperName>customer_first_name</externalDeveloperName>
        <label>customer_first_name</label>
        <length>128</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>customer_last_name__c</fullName>
        <description>customer_last_name</description>
        <externalDeveloperName>customer_last_name</externalDeveloperName>
        <label>customer_last_name</label>
        <length>128</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>customer_user_id__c</fullName>
        <description>customer_user_id</description>
        <externalDeveloperName>customer_user_id</externalDeveloperName>
        <label>customer_user_id</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>delete_time__c</fullName>
        <description>delete_time</description>
        <externalDeveloperName>delete_time</externalDeveloperName>
        <label>delete_time</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>feedback_private_to_thumbtack__c</fullName>
        <description>feedback_private_to_thumbtack</description>
        <externalDeveloperName>feedback_private_to_thumbtack</externalDeveloperName>
        <label>feedback_private_to_thumbtack</label>
        <length>128</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>feedback_private_to_user__c</fullName>
        <description>feedback_private_to_user</description>
        <externalDeveloperName>feedback_private_to_user</externalDeveloperName>
        <label>feedback_private_to_user</label>
        <length>128</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>is_anonymous__c</fullName>
        <defaultValue>false</defaultValue>
        <description>is_anonymous</description>
        <externalDeveloperName>is_anonymous</externalDeveloperName>
        <label>is_anonymous</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>pro_email__c</fullName>
        <description>pro_email</description>
        <externalDeveloperName>pro_email</externalDeveloperName>
        <label>pro_email</label>
        <length>128</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>pro_first_name__c</fullName>
        <description>pro_first_name</description>
        <externalDeveloperName>pro_first_name</externalDeveloperName>
        <label>pro_first_name</label>
        <length>128</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>pro_last_name__c</fullName>
        <description>pro_last_name</description>
        <externalDeveloperName>pro_last_name</externalDeveloperName>
        <label>pro_last_name</label>
        <length>128</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>pro_user_id__c</fullName>
        <description>pro_user_id</description>
        <externalDeveloperName>pro_user_id</externalDeveloperName>
        <label>pro_user_id</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>rating__c</fullName>
        <description>rating</description>
        <externalDeveloperName>rating</externalDeveloperName>
        <label>rating</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>rca_name__c</fullName>
        <description>rca_name</description>
        <externalDeveloperName>rca_name</externalDeveloperName>
        <label>rca_name</label>
        <length>128</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>response_text__c</fullName>
        <description>response_text</description>
        <externalDeveloperName>response_text</externalDeveloperName>
        <label>response_text</label>
        <length>128</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>review_id__c</fullName>
        <description>review_id</description>
        <externalDeveloperName>review_id</externalDeveloperName>
        <label>review_id</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>review_time__c</fullName>
        <description>review_time</description>
        <externalDeveloperName>review_time</externalDeveloperName>
        <label>review_time</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>text__c</fullName>
        <description>text</description>
        <externalDeveloperName>text</externalDeveloperName>
        <label>text</label>
        <length>128</length>
        <type>Text</type>
    </fields>
    <label>becquerel__concerning_reviews</label>
    <listViews>
        <fullName>All</fullName>
        <columns>rating__c</columns>
        <columns>customer_first_name__c</columns>
        <columns>customer_last_name__c</columns>
        <columns>customer_user_id__c</columns>
        <columns>pro_first_name__c</columns>
        <columns>pro_last_name__c</columns>
        <columns>pro_user_id__c</columns>
        <columns>rca_name__c</columns>
        <columns>review_time__c</columns>
        <columns>bid_bid_id__c</columns>
        <columns>review_id__c</columns>
        <columns>ExternalId</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <pluralLabel>becquerel__concerning_reviews</pluralLabel>
</CustomObject>